--- a/wbt/html/contact.html
+++ b/wbt/html/contact.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" type="text/css" href="/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="/wbt/css/contact.css">
 </head>
 <body>
     <header>
-        <a href="/index.html">Home</a>
-        <a href="/html/education.html">Education</a>
-        <a href="/html/project.html">Projects</a>
-        <a href="/html/experience.html">Experience</a>
-        <a href="/html/contact.html">Contact</a>
+        <a href="/wbt/index.html">Home</a>
+        <a href="/wbt/html/education.html">Education</a>
+        <a href="/wbt/html/project.html">Projects</a>
+        <a href="/wbt/html/experience.html">Experience</a>
+        <a href="/wbt/html/contact.html">Contact</a>
     </header><br>
 
     <h1>Enter this details</h1>
