--- a/wbt/html/education.html
+++ b/wbt/html/education.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
-    <link rel="stylesheet" type="text/css" href="/css/education.css">
+    <link rel="stylesheet" type="text/css" href="/wbt/css/education.css">
 </head>
 <body>
     <header>
-        <a href="/index.html">Home</a>
-        <a href="/html/education.html">Education</a>
-        <a href="/html/project.html">Projects</a>
-        <a href="/html/experience.html">Experience</a>
-        <a href="/html/contact.html">Contact</a>
+        <a href="/wbt/index.html">Home</a>
+        <a href="/wbt/html/education.html">Education</a>
+        <a href="/wbt/html/project.html">Projects</a>
+        <a href="/wbt/html/experience.html">Experience</a>
+        <a href="/wbt/html/contact.html">Contact</a>
     </header> <br>
 
     <section>
 
         <div class="all">
             <div class="c1">
-                <img src="/image/aiub.png" alt="Aiub Logo" >
+                <img src="/wbt/image/aiub.png" alt="Aiub Logo" >
             </div>
             <div class="c2">
                 <h3>Bachelor of Science</h3>
@@ -35,7 +35,7 @@
 
         <div class="all">
             <div class="c1">
-                <img src="/image/government-science.png" alt="GSC logo">
+                <img src="/wbt/image/government-science.png" alt="GSC logo">
             </div>
             <div class="c2">
                 <h3>Higher Secondary</h3>
@@ -51,7 +51,7 @@
 
         <div class="all">
             <div class="c1">
-                <img src="/image/hhs.jpg" alt="Harishangan High School">
+                <img src="/wbt/image/hhs.jpg" alt="Harishangan High School">
             </div>
             <div class="c2">
                 <h3>Secondary School Certificate</h3>
