--- a/wbt/html/experience.html
+++ b/wbt/html/experience.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience</title>
-    <link rel="stylesheet" type="text/css" href="/css/experience.css">
+    <link rel="stylesheet" type="text/css" href="/wbt/css/experience.css">
 </head>
 <body>
     <header>
-        <a href="/index.html">Home</a>
-        <a href="/html/education.html">Education</a>
-        <a href="/html/project.html">Projects</a>
-        <a href="/html/experience.html">Experience</a>
-        <a href="/html/contact.html">Contact</a>
+        <a href="/wbt/index.html">Home</a>
+        <a href="/wbt/html/education.html">Education</a>
+        <a href="/wbt/html/project.html">Projects</a>
+        <a href="/wbt/html/experience.html">Experience</a>
+        <a href="/wbt/html/contact.html">Contact</a>
     </header> <br>
 
     <div class="exp">
         <div class="c1">
-            <img src="/image/MixCollage.jpg" alt="Robotics">
+            <img src="/wbt/image/MixCollage.jpg" alt="Robotics">
         </div>
         <div class="c2">
             <h3>Robotics (RC RoboRace, Robo Soccer cars & project)</h3>
@@ -30,7 +30,7 @@
 
     <div class="exp">
         <div class="c1">
-            <img src="/image/Software.png" alt="Software">
+            <img src="/wbt/image/Software.png" alt="Software">
         </div>
         <div class="c2">
             <h3>Robotics (RC RoboRace, Robo Soccer cars & project)</h3>
@@ -43,7 +43,7 @@
 
     <div class="exp">
         <div class="c1">
-            <img src="/image/Scouts.png" alt="Scouts">
+            <img src="/wbt/image/Scouts.png" alt="Scouts">
         </div>
         <div class="c2">
             <h3>Bangladesh Scouts</h3>
