--- a/wbt/html/project.html
+++ b/wbt/html/project.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" type="text/css" href="/css/project.css">
+    <link rel="stylesheet" type="text/css" href="/wbt/css/project.css">
 </head>
 <body>
     <header>
-        <a href="/index.html">Home</a>
-        <a href="/html/education.html">Education</a>
-        <a href="/html/project.html">Projects</a>
-        <a href="/html/experience.html">Experience</a>
-        <a href="/html/contact.html">Contact</a>
+        <a href="/wbt/index.html">Home</a>
+        <a href="/wbt/html/education.html">Education</a>
+        <a href="/wbt/html/project.html">Projects</a>
+        <a href="/wbt/html/experience.html">Experience</a>
+        <a href="/wbt/html/contact.html">Contact</a>
     </header> <br>
 
     <div class="pro">
         <div class="c1">
-            <img src="/image/3dof.jpg" alt="Robotics">
+            <img src="/wbt/image/3dof.jpg" alt="Robotics">
         </div>
         <div class="c2">
             <h3>Wireless-controlled Robotic Car with a Multi-DOF(4) Object-Manipulating Arm</h3>
@@ -29,7 +29,7 @@
 
     <div class="pro">
         <div class="c1">
-            <img src="/image/MH.png" alt="Mindcology">
+            <img src="/wbt/image/MH.png" alt="Mindcology">
         </div>
         <div class="c2">
             <h3><strong>MINDCOLOGY</strong> (mental health matters)</h3>
@@ -41,7 +41,7 @@
 
     <div class="pro">
         <div class="c1">
-            <img src="/image/Pharmacy.png" alt="Pharmacy management">
+            <img src="/wbt/image/Pharmacy.png" alt="Pharmacy management">
         </div>
         <div class="c2">
             <h3>Pharmacy Management System</h3>
@@ -53,7 +53,7 @@
 
     <div class="pro">
         <div class="c1">
-            <img src="/image/Emergency.png" alt="Emergency Service">
+            <img src="/wbt/image/Emergency.png" alt="Emergency Service">
         </div>
         <div class="c2">
             <h3>Emergency Service System</h3>
