--- a/wbt/index.html
+++ b/wbt/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../wbt/css/styles.css">
 </head>
 <body>
     <header>
@@ -15,17 +15,17 @@
             <li><a href="/wbt/html/experience.html">Experience</a></li>
             <li><a href="/wbt/html/contact.html">Contact</a></li>
         </ul> -->
-        <a href="/index.html">Home</a>
-        <a href="/html/education.html">Education</a>
-        <a href="/html/project.html">Projects</a>
-        <a href="/html/experience.html">Experience</a>
-        <a href="/html/contact.html">Contact</a>
+        <a href="../wbt/index.html">Home</a>
+        <a href="../wbt/html/education.html">Education</a>
+        <a href="../wbt/html/project.html">Projects</a>
+        <a href="../wbt/html/experience.html">Experience</a>
+        <a href="../wbt/html/contact.html">Contact</a>
 
     </header>
 
     
     <br>
-    <div><img src="/image/pic.jpg" alt="Homepage photo" />
+    <div><img src="../wbt/image/pic.jpg" alt="Homepage photo" />
         <br>
         <h1>Md. Fardin Hossain Neloy</h1>
     </div>
