--- a/wbt/html/contact.html
+++ b/wbt/html/contact.html
@@ -18,7 +18,7 @@
 
     <h1>Contuct for details</h1>
 
-    <form method="get" class="contuct">
+    <form method="post" class="contuct">
       <div class="form-group">
         <label for="firstname">First Name:</label>
         <input type="text" id="firstname" name="Firstname" required />
